<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_application_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.lodz.trackingsystem.ApplicationSelection">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/selectionGroup"
        android:checkedButton="@+id/monitRadio">
        <RadioButton
            android:text="@string/selection_monit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="131dp"
            android:id="@+id/monitRadio"
            android:duplicateParentState="false"
            android:checked="false" />
        <RadioButton
            android:text="@string/selection_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adminRadio"
            android:layout_below="@+id/monitRadio"
            android:layout_alignStart="@+id/monitRadio"
            android:layout_marginTop="12dp"
            android:duplicateParentState="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:layout_marginTop="92dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/selection_text" />

    <Button
        android:text="@string/selection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acceptButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp" />

    <TextView
        android:text="@string/selection_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="33dp"
        android:textAlignment="viewStart"
        android:layout_below="@+id/selectionGroup"
        android:layout_alignParentStart="true" />

</RelativeLayout>
